# FileSystem

./: Block.c  CMakeLists.txt  ConsoleCommands.c  GroupBlocks.h  GroupDescriptor.c  GroupDescriptor.h  Inode.c  Inode.h  MiniFs.c  README.md  SuperBlock.c  main.c
client/: Client.c  Client.h  main.c
console/: Console.c  Console.h
fsComponents/headers/: Block.h  GroupDescriptor.h  GroupDescriptors.h  Inode.h  MiniFs.h  SuperBlock.h
fsComponents/sources/: Block.c  GroupDescriptor.c  GroupDescriptors.c  Inode.c  MiniFs.c  SuperBlock.c
server/: Server.c  Server.h  main.c
